kubernetes/apps/production/media/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-file-pvc
      - name: bazarr-config-ini
        configMap:
          name: init-bazarr-files
          items:
          - key: config.ini
            path: config.ini
          defaultMode: 0644
      - name: bazarr-entrypoint-sh
        configMap:
          name: init-bazarr-files
          items:
          - key: entrypoint.sh
            path: entrypoint.sh
          defaultMode: 0755
      containers:
      - name: bazarr
        image: ghcr.io/k8s-at-home/bazarr
        command: ["/bin/sh"]
        args: ["-c", "/app/entrypoint.sh"]
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: config-volume
          mountPath: "/config"
          subPath: "configs/bazarr"
        - name: bazarr-config-ini
          mountPath: /app/config.ini
          subPath: config.ini
        - name: bazarr-entrypoint-sh
          mountPath: /app/entrypoint.sh
          subPath: entrypoint.sh
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  ports:
  - port: 6767
    protocol: TCP
    targetPort: 6767
  selector:
    app: bazarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /bazarr
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
