kubernetes/apps/production/media/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-file-pvc
      - name: prowlarr-config-xml
        configMap:
          name: init-prowlarr-files
          items:
          - key: config.xml
            path: config.xml
          defaultMode: 0644
      - name: prowlarr-entrypoint-sh
        configMap:
          name: init-prowlarr-files
          items:
          - key: entrypoint.sh
            path: entrypoint.sh
          defaultMode: 0755
      containers:
      - name: prowlarr
        image: ghcr.io/k8s-at-home/prowlarr
        command: ["/bin/sh"]
        args: ["-c", "/app/entrypoint.sh"]
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: config-volume
          mountPath: "/config"
          subPath: "configs/prowlarr"
        - name: prowlarr-config-xml
          mountPath: /app/config.xml
          subPath: config.xml
        - name: prowlarr-entrypoint-sh
          mountPath: /app/entrypoint.sh
          subPath: entrypoint.sh
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  ports:
  - port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  entryPoints:
  - web
  routes:
    - match: PathPrefix(`/prowlarr`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
