kubernetes/apps/production/media/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: radarr-config-xml
        configMap:
          name: init-radarr-files
          items:
          - key: config.xml
            path: config.xml
          defaultMode: 0644
      - name: radarr-entrypoint-sh
        configMap:
          name: init-radarr-files
          items:
          - key: entrypoint.sh
            path: entrypoint.sh
          defaultMode: 0755
      containers:
      - name: radarr
        image: ghcr.io/k8s-at-home/radarr
        command: ["/bin/sh"]
        args: ["-c", "/app/entrypoint.sh"]
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: radarr
        - name: radarr-config-xml
          mountPath: /app/config.xml
          subPath: config.xml
        - name: radarr-entrypoint-sh
          mountPath: /app/entrypoint.sh
          subPath: entrypoint.sh
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media
spec:
  entryPoints:
  - web
  routes:
    - match: PathPrefix(`/radarr`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
