kubernetes/apps/production/media/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-file-pvc
      containers:
      - name: sabnzbd
        image: ghcr.io/k8s-at-home/sabnzbd
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: configs/sabnzbd
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sabnzbd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /sabnzbd
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
